[tool.poetry]
name = "ml-book"
version = "0.1.0"
description = "Introduction to ML with Poetry Dependency Management"
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.23.2"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
